--- a/Index.htm
+++ b/Index.htm
@@ -78,7 +78,7 @@
           </div>
           <div style="margin-top:0.75rem;display:flex;gap:0.6rem">
             <button class="btn btn-ghost" onclick="alert('Coming Soon!')">Demo</button>
-            <button class="btn btn-primary" onclick="">Code</button>
+            <button class="btn btn-primary" onclick="window.open('C:\Users\Hp\Desktop\PERSONAL PORTFOLIO WEBSITE\ai-trip-planner')">Code</button>
           </div>
         </article>
 
